--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bip39": "^3.1.0",
     "ed25519-hd-key": "^1.1.0",
     "ethers": "^6.13.5",
+    "gsap": "^3.12.7",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
