--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ed25519-hd-key": "^1.1.0",
     "ethers": "^6.13.5",
     "gsap": "^3.12.7",
+    "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
