--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-toast": "^1.2.11",
     "@solana/web3.js": "^1.98.2",
     "bip39": "^3.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "ed25519-hd-key": "^1.1.0",
     "ethers": "^6.13.5",
     "gsap": "^3.12.7",
@@ -18,6 +21,8 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "tailwind-merge": "^3.2.0",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
